Lots of updated code.  Keynote.

--- a/data/consent.html
+++ b/data/consent.html
@@ -5,4 +5,11 @@
 <button>open private</button>
 <button>it's cool</button>
 </p>
+
+
+<!-- TODO, jquery?  underscore?  -->
+<script>
+// some javascript to template the actual form.
+</script>
+
 </html>
