--- a/data/consent.html
+++ b/data/consent.html
@@ -1,15 +1,12 @@
 <html>
-<p>This page is naughty.</p>
-<p>Would your rather open it in the "private window"</p>
-<p>
-<button>open private</button>
-<button>it's cool</button>
-</p>
-
-
-<!-- TODO, jquery?  underscore?  -->
-<script>
-// some javascript to template the actual form.
-</script>
-
+<body>
+<center>
+  <p>Visiting this page might be embarassing if someone found out.</p>
+  <p>Would your like to open it in a private browsing window?</p>
+  <p>
+    <button onClick="addon.postMessage('openInPrivate');">Use Private Window</button>
+    <button onClick="addon.postMessage('continue');">Use Normal Window</button>
+  </p>
+</center>
+</body>
 </html>
