--- a/data/consent.html
+++ b/data/consent.html
@@ -2,7 +2,7 @@
 <body>
 <center>
   <p>Visiting this page might be embarassing if someone found out.</p>
-  <p>Would your like to open it in a private browsing window?</p>
+  <p>Would you like to open it in a private browsing window?</p>
   <p>
     <button onClick="addon.postMessage('openInPrivate');">Use Private Window</button>
     <button onClick="addon.postMessage('continue');">Use Normal Window</button>
