fixes issue #36: figure out a test framework

--- a/data/consent.html
+++ b/data/consent.html
@@ -8,5 +8,9 @@
     <button onClick="addon.postMessage('continue');">Use Normal Window</button>
   </p>
 </center>
+<script>
+  // this enables the test harness to act as if a button has been pressed
+  addon.on("message", function(message) { addon.postMessage(message); });
+</script>
 </body>
 </html>
