test blush/forget site

--- a/data/blushthis.html
+++ b/data/blushthis.html
@@ -10,5 +10,9 @@
     <button id="cancel" onClick="addon.postMessage('cancel');">Cancel</button>
   </p>
 </center>
+<script>
+  // this enables the test harness to act as if a button has been pressed
+  addon.on("message", function(message) { addon.postMessage(message); });
+</script>
 </body>
 </html>
