Link to description of data in install panel

--- a/data/install.html
+++ b/data/install.html
@@ -2,7 +2,7 @@
 <head>
 <body>
 <center>
-  <p>Blushproof collects metrics to improve performance. You can disable this any time by visiting Blushproof preferences in about:addons.</p>
+  <p>Blushproof collects <a href=https://github.com/mozilla/blushproof/wiki/Design-doc#data-that-blushproof-collects>metrics</a> to improve performance. You can disable this any time by visiting Blushproof preferences in about:addons.</p>
   <p>
     <p>
     <button id="ok" onClick="addon.postMessage('ok');">OK</button>
