first pass at making blushproof UI recognizable

--- a/data/blushthis.html
+++ b/data/blushthis.html
@@ -10,6 +10,7 @@
     <button id="cancel" onClick="addon.postMessage('cancel');">Cancel</button>
   </p>
 </center>
+<img src="blushproof-16.png"></img>
 <script>
   // this enables the test harness to act as if a button has been pressed
   addon.on("message", function(message) { addon.postMessage(message); });
