--- a/data/install.html
+++ b/data/install.html
@@ -8,6 +8,7 @@
     <button id="ok" onClick="addon.postMessage('ok');">OK</button>
     <button id="disable" onClick="addon.postMessage('disable');">Disable reporting</button>
   </p>
+<img src="blushproof-16.png"></img>
 </center>
 </body>
 </html>
