--- a/data/consent.html
+++ b/data/consent.html
@@ -8,6 +8,7 @@
     <button onClick="addon.postMessage('continue');">Use Normal Window</button>
   </p>
 </center>
+<img src="blushproof-16.png"></img>
 <script>
   // this enables the test harness to act as if a button has been pressed
   addon.on("message", function(message) { addon.postMessage(message); });
