streamline message, add category mappings

--- a/data/consent.html
+++ b/data/consent.html
@@ -3,12 +3,10 @@
 <center>
   <img src="blushproof-32.png"></img>
   <div id="domain-container">
-    <p>Visiting the site '<span id="domain"></span>' might be embarrassing if someone found out.</p>
-    <p>(Blushproof thinks this site belongs to the category '<span id="domain-category"></span>')</p>
+    <p>Visiting the <span id="domain-category"></span> site '<span id="domain"></span>' might be embarrassing if someone found out.</p>
   </div>
   <div id="query-container">
-    <p>Searching for the term '<span id="query"></span>' might be embarrassing if someone found out.</p>
-    <p>(Blushproof thinks this term belongs to the category '<span id="query-category"></span>')</p>
+    <p>Searching for the <span id="query-category"></span> term '<span id="query"></span>' might be embarrassing if someone found out.</p>
   </div>
   <p>
     <button onClick="addon.postMessage('openInPrivate');">Use Private Window</button>
