change continue button text

--- a/data/consent.html
+++ b/data/consent.html
@@ -10,7 +10,7 @@
   </div>
   <p>
     <button onClick="addon.postMessage('openInPrivate');">Use Private Window</button>
-    <button onClick="addon.postMessage('continue');">This Doesn't Embarrass Me</button>
+    <button onClick="addon.postMessage('continue');">Continue Navigation</button>
   </p>
 </center>
 <script>
