--- a/data/blushbutton.html
+++ b/data/blushbutton.html
@@ -18,7 +18,7 @@
 </style>
 </head>
 <body>
-<img id="icon" src="blushproof-16.png"></img></td>
-<span id="text">Blush This!</span></td>
+<td><img id="icon" src="blushproof-16.png"></img></td>
+<td><span id="text">Blush This!</span></td>
 </body>
 </html>
