Remove spurious td tags from blushbutton.html

--- a/data/blushbutton.html
+++ b/data/blushbutton.html
@@ -18,7 +18,7 @@
 </style>
 </head>
 <body>
-<td><img id="icon" src="blushproof-16.png"></img></td>
-<td><span id="text">Blush This!</span></td>
+<img id="icon" src="blushproof-16.png"></img>
+<span id="text">Blush This!</span>
 </body>
 </html>
